--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello
+    <div class="container">
+        <div class="left">
+            <img src="img/code.jpg" alt="Some code on screen">
+            <p>Photo by <a href="https://unsplash.com/@florianolv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Florian Olivo</a> on <a href="https://unsplash.com/photos/4hbJ-eymZ1o?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </p>
+        </div>
+        <div class="right">
+            Form
+        </div>
+    </div>
 </body>
 </html>
