Added form structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
             </p>
         </div>
         <div class="right">
-            Form
+            <div class="information">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+                <p>You know you want to.</p>
+            </div>
+            <form action="" method="get">
+                <p>Let's do this!</p>
+                    <div class="form-row">
+                        <label for="name">First name</label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="form-row">
+                        <label for="surname">Last name</label>
+                        <input type="text" id="surname">
+                    </div>
+                    <div class="form-row">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-row">
+                        <label for="phone">Phone number</label>
+                        <input type="tel" id="phone">
+                    </div>
+                    <div class="form-row">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <div class="form-row">
+                        <label for="password">Confirm password</label>
+                        <input type="password" id="password">
+                    </div>
+                <button type="submit">Create Account</button>
+            </form>
+            <p>Already have an account? Log in!</p>
         </div>
     </div>
 </body>
