--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <div class="container">
         <div class="left">
-            <p class="author">Photo by <a href="https://unsplash.com/@florianolv?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Florian Olivo</a> on <a href="https://unsplash.com/photos/4hbJ-eymZ1o?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <div class="logo">
+                <img src="img/odin.png" alt="Logo">
+                <p class="text">Sign Up</p>
+            </div>
+            <p class="author">Photo by Florian Olivo on Unsplash</a>
             </p>
         </div>
         <div class="right">
