--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
                 <p>You know you want to.</p>
             </div>
-            <form action="" method="get">
+            <form>
                 <p>Let's do this!</p>
                     <div class="form-row">
                         <label for="name">First name</label>
-                        <input type="text" id="name">
+                        <input type="text" id="name" autocomplete="given-name">
                     </div>
                     <div class="form-row">
                         <label for="surname">Last name</label>
-                        <input type="text" id="surname">
+                        <input type="text" id="surname" autocomplete="family-name">
                     </div>
                     <div class="form-row">
                         <label for="email">Email</label>
-                        <input type="email" id="email">
+                        <input type="email" id="email" autocomplete="email">
                     </div>
                     <div class="form-row">
                         <label for="phone">Phone number</label>
-                        <input type="tel" id="phone">
+                        <input type="tel" id="phone" autocomplete="tel">
                     </div>
                     <div class="form-row">
                         <label for="password">Password</label>
-                        <input type="password" id="password">
+                        <input type="password" id="password" autocomplete="new-password">
                     </div>
                     <div class="form-row">
-                        <label for="password">Confirm password</label>
-                        <input type="password" id="password">
+                        <label for="confirm-password">Confirm password</label>
+                        <input type="password" id="confirm-password" autocomplete="new-password">
                     </div>
-                <button type="submit">Create Account</button>
             </form>
+            <button type="submit">Create Account</button>
             <p>Already have an account? Log in!</p>
         </div>
     </div>
