--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         </div>
         <div class="right">
             <div class="information">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
-                <p>You know you want to.</p>
+                <p class="info-text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+                <p class="info-text">Sign up now to get started.</p>
+                <p class="info-text">You know you want to.</p>
             </div>
-            <form>
+            <form method="post">
                 <p>Let's do this!</p>
                     <div class="form-row">
                         <label for="name">First name</label>
@@ -50,7 +51,7 @@
                     </div>
             </form>
             <button type="submit">Create Account</button>
-            <p>Already have an account? Log in!</p>
+            <p class="login-text">Already have an account? Log in!</p>
         </div>
     </div>
 </body>
