--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
                 <form method="post">
                     <div class="form">
-                        <p class="text">Let's do this!</p>
+                        <p class="text-right">Let's do this!</p>
                         <div class="form-row">
                             <label for="name">First name</label>
                             <input type="text" id="name" autocomplete="given-name">
@@ -43,7 +43,7 @@
 
                         <div class="form-row">
                             <label for="phone">Phone number</label>
-                            <input type="tel" id="phone" autocomplete="tel">
+                            <input type="tel" id="phone" autocomplete="tel" pattern="[0-9]{9}">
                         </div>
                             
                         <div class="form-row">
